--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Cory W. Boris
+title: My Static Website
 email: CoryWBoris@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is my site, and I'm Cory Boris. Hope you find something interesting here!
